--- a/index.html
+++ b/index.html
@@ -331,51 +331,44 @@
                 <div class="nk-gap-5"></div>
             </div>
             <!-- END: Need a Project? -->
-            <!--
-    START: Footer
--->
-            <footer class="nk-footer">
-                <div class="container">
-                    <div class="row vertical-gap">
-                        <div class="col-lg-5">
-                            <h3 class="h5 mb-20">Piroll Design, Inc.</h3>
-                            <p class="mb-0">&copy; 2017 Piroll. All rights reserved. <br> Design by robirurk. Code by nK.</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="#">hello@pirolltheme.com</a>
-                            <br> +44 987 065 908
-                        </div>
-                        <div class="col-lg-2">
-                            <div class="nk-links-list">
-                                <ul>
-                                    <li><a href="#">Projects</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Career</a></li>
-                                </ul>
-                                <ul>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Events</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                    <li><a href="#">Legals</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1">
-                            <div class="nk-links-list">
-                                <ul>
-                                    <li><a href="#">Facebook</a></li>
-                                    <li><a href="#">Twitter</a></li>
-                                    <li><a href="#">Instagram</a></li>
-                                    <li><a href="#">Dribbble</a></li>
-                                </ul>
-                            </div>
+            START: Footer
+        -->
+        <footer class="nk-footer">
+            <div class="container">
+                <div class="row vertical-gap">
+                    <div class="col-lg-5">
+                        <h3 class="h5 mb-20">Nunya Media</h3>
+                        <p class="mb-0">&copy; 2021 Nunya Media. All rights reserved. <br> <a href="http://www.nunyamarketing.uk">Development by Nunya Marketing.</a></p>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="#">hello@nunyagroup.com</a>
+                        <br> +44 7704 423882
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="nk-links-list">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contact.html">Enquire</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="https://www.instagram.com/nunyamedia/">Instagram</a></li>
+                                <li><a href="https://www.facebook.com/nunyamedia/">Facebook</a></li>
+                                <li><a href="https://twitter.com/nunyamedia">Twitter</a></li>
+                                <li><a href="https://www.snapchat.com/add/nunyamedia">Snapchat</a></li>
+                                <li><a href="https://www.linkedin.com/company/nunyamedia">LinkedIn</a></li>
+                                <li><a href="https://www.youtube.com/channel/UCBuzYBQlgBX5Ys3uJXR21Ng">YouTube</a></li>
+                            </ul>
                         </div>
                     </div>
+                    <div class="col-lg-1"></div>
                 </div>
-            </footer>
-            <!-- END: Footer -->
+            </div>
+        </footer>
+                    <!-- END: Footer -->
         </div>
         <!-- START: Scripts -->
         <!-- GSAP -->
