--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             .nk-navbar-white-text-on-top
             .nk-navbar-dark
     -->
-            <nav class="nk-navbar nk-navbar-top">
+            <nav class="nk-navbar nk-navbar-top nk-navbar">
                 <div class="container">
                     <div class="nk-nav-table">
                         <ul class="nk-nav nk-nav-left hidden-md-down" data-nav-mobile="#nk-nav-mobile">
@@ -66,7 +66,7 @@
                             </li>
                         </ul>
                         <a href="index.html" class="nk-nav-logo">
-                            <img src="assets/images/nunyamedia.png" alt="" width="81">
+                            <img src="assets/images/nunyamedia.png" alt="" width="101">
                         </a>
                         <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
 
@@ -110,7 +110,7 @@
                         <div class="nk-nav-header">
                             <div class="nk-nav-logo">
                                 <a href="index.html" class="nk-nav-logo">
-                                    <img src="assets/images/nunyamedia.png" alt="" width="81">
+                                    <img src="assets/images/nunyamedia.png" alt="" width="101">
                                 </a>
                             </div>
                             <div class="nk-nav-close nk-navbar-full-toggle">
